# budget_beacon_server

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/: 20231211141905_create_accounts_table.sql  20231214143810_create_records_table.sql  20231218135109_add_account_balance.sql
src/: main.rs  models.rs  routes.rs
src/models/: account.rs  record.rs
src/routes/: accounts.rs  transaction_records.rs
