[package]
name = "budget_beacon_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.193"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "macros" ] }
tokio = "1.35.0"
