[package]
name = "budget_beacon_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "time", "chrono"] }
tokio = "1.35.0"
